force-app/main/default/objects/Receipt_Line_Item__c/fields/Advance_Payment__c.field-meta.xml
<CustomField>
    <fullName>Advance_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advance Payment</label>
    <referenceTo>Advance_Payment__c</referenceTo>
    <relationshipLabel>Receipt Line Items</relationshipLabel>
    <relationshipName>Receipt_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>