force-app/main/default/objects/Receipt_Line_Item__c/fields/Cheque_no_Transaction_Number__c.field-meta.xml
<CustomField>
    <fullName>Cheque_no_Transaction_Number__c</fullName>
    <label>Cheque no Transaction Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>