force-app/main/default/objects/Receipt_Line_Item__c/fields/Demand__c.field-meta.xml
<CustomField>
    <fullName>Demand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Demand</label>
    <referenceTo>Demands__c</referenceTo>
    <relationshipLabel>Receipt Line Items (Demand)</relationshipLabel>
    <relationshipName>Receipt_Line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>