force-app/main/default/objects/Receipt_Line_Item__c/fields/Demands__c.field-meta.xml
<CustomField>
    <fullName>Demands__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Demands</label>
    <referenceTo>Demands__c</referenceTo>
    <relationshipLabel>Receipt Line Items</relationshipLabel>
    <relationshipName>Receipt_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>