force-app/main/default/objects/Receipt_Line_Item__c/fields/Payment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Payment_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Schedule</label>
    <referenceTo>Payment_Schedule__c</referenceTo>
    <relationshipLabel>Receipt Line Items</relationshipLabel>
    <relationshipName>Receipt_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>