force-app/main/default/objects/Receipt_Line_Item__c/fields/Receipt__c.field-meta.xml
<CustomField>
    <fullName>Receipt__c</fullName>
    <label>Receipt</label>
    <referenceTo>Receipt__c</referenceTo>
    <relationshipLabel>Receipt Line Items</relationshipLabel>
    <relationshipName>Receipt_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>